--- a/cross_attention.ipynb
+++ b/cross_attention.ipynb
@@ -12,36 +12,29 @@
     "import torch.nn.functional as F\n",
     "\n",
     "\n",
+    "# cross_attention.py\n",
     "class CrossAttention(nn.Module):\n",
-    "    def __init__(self, dim=1024, num_heads=8):\n",
+    "    def __init__(self, dim, num_heads):\n",
     "        super().__init__()\n",
     "        self.num_heads = num_heads\n",
-    "        # 64\n",
-    "        self.head_dim = dim // num_heads\n",
-    "        self.scale = self.head_dim ** -0.5\n",
-    "\n",
-    "        self.query = nn.Linear(dim, dim)\n",
-    "        self.key = nn.Linear(dim, dim)\n",
-    "        self.value = nn.Linear(dim, dim)\n",
-    "        self.out = nn.Linear(dim, dim)\n",
-    "\n",
-    "    def forward(self, x, y):\n",
-    "        batch_size = x.size(0)\n",
-    "\n",
-    "        q = self.query(x).view(batch_size, -1, self.num_heads, self.head_dim).transpose(1, 2)\n",
-    "        k = self.key(y).view(batch_size, -1, self.num_heads, self.head_dim).transpose(1, 2)\n",
-    "        v = self.value(y).view(batch_size, -1, self.num_heads, self.head_dim).transpose(1, 2)\n",
-    "\n",
-    "        attn = torch.matmul(q, k.transpose(-2, -1)) * self.scale\n",
-    "        attn = F.softmax(attn, dim=-1)\n",
-    "\n",
+    "        self.scale = (dim // num_heads) ** -0.5\n",
+    "        \n",
+    "        self.to_q = nn.Linear(dim, dim)\n",
+    "        self.to_k = nn.Linear(dim, dim)\n",
+    "        self.to_v = nn.Linear(dim, dim)\n",
+    "        self.to_out = nn.Linear(dim, dim)\n",
+    "        \n",
+    "    def forward(self, x, context):\n",
+    "        q = self.to_q(x)\n",
+    "        k = self.to_k(context)\n",
+    "        v = self.to_v(context)\n",
+    "        \n",
+    "        q, k, v = map(lambda t: rearrange(t, 'b n (h d) -> b h n d', h=self.num_heads), (q, k, v))\n",
+    "        dots = torch.matmul(q, k.transpose(-1, -2)) * self.scale\n",
+    "        attn = dots.softmax(dim=-1)\n",
     "        out = torch.matmul(attn, v)\n",
-    "        out = out.transpose(1, 2).contiguous().view(batch_size, -1, self.num_heads * self.head_dim)\n",
-    "        \n",
-    "        # 压缩序列长度维度\n",
-    "        out = out.mean(dim=1)  \n",
-    "        \n",
-    "        return self.out(out)\n"
+    "        out = rearrange(out, 'b h n d -> b n (h d)')\n",
+    "        return self.to_out(out)"
    ]
   }
  ],
