--- a/test_utils.ipynb
+++ b/test_utils.ipynb
@@ -41,6 +41,7 @@
     "    model.eval()\n",
     "    all_preds = []\n",
     "    all_labels = []\n",
+    "    reconstruction_loss = 0\n",
     "    \n",
     "    with torch.no_grad():\n",
     "        for images, input_ids, attention_mask, labels in dataloader:\n",
@@ -49,24 +50,39 @@
     "            attention_mask = attention_mask.to(device)\n",
     "            labels = labels.to(device)\n",
     "            \n",
-    "            image_feature_vector, text_feature_vector, image_cls, text_cls,  (first_expert_outputs, second_expert_outputs), (first_gating_output, second_gating_output) = model(images, input_ids, attention_mask)\n",
-    "            _, preds = torch.max(image_cls, 1)\n",
+    "            # 获取模型输出\n",
+    "            (image_feature_vector, text_feature_vector, \n",
+    "             image_cls, text_cls, fused_cls,\n",
+    "             text_reconstruction,\n",
+    "             expert_outputs, gating_outputs) = model(images, input_ids, attention_mask)\n",
+    "            \n",
+    "            # 使用融合后的分类结果\n",
+    "            _, preds = torch.max(fused_cls, 1)\n",
+    "            \n",
+    "            # 计算文本重建损失\n",
+    "            recon_loss = nn.CrossEntropyLoss(ignore_index=0)(\n",
+    "                text_reconstruction.view(-1, text_reconstruction.size(-1)),\n",
+    "                input_ids.view(-1)\n",
+    "            )\n",
+    "            reconstruction_loss += recon_loss.item()\n",
     "            \n",
     "            all_preds.extend(preds.cpu().tolist())\n",
     "            all_labels.extend(labels.cpu().tolist())\n",
     "    \n",
     "    accuracy = sum(p == l for p, l in zip(all_preds, all_labels)) / len(all_labels)\n",
+    "    avg_reconstruction_loss = reconstruction_loss / len(dataloader)\n",
     "    \n",
     "    print(\"\\n预测结果:\")\n",
-    "    print_output_distribution(image_cls)\n",
+    "    print_output_distribution(fused_cls)\n",
     "    for pred, label in zip(all_preds[:10], all_labels[:10]):  # 只打印前10个结果\n",
     "        pred_text = label_to_text_map[pred]\n",
     "        true_text = label_to_text_map[label]\n",
     "        print(f\"预测: {pred_text}, 实际: {true_text}\")\n",
     "    \n",
     "    print(f\"\\n准确率: {accuracy:.4f}\")\n",
-    "    visualize_expert_attention(model, dataloader, device, num_experts=10)\n",
-    "    return accuracy"
+    "    print(f\"平均重建损失: {avg_reconstruction_loss:.4f}\")\n",
+    "    \n",
+    "    return accuracy, avg_reconstruction_loss"
    ]
   },
   {
