--- a/TextDecoder.ipynb
+++ b/TextDecoder.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TextDecoder.py\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
@@ -21,18 +22,20 @@
     "    def forward(self, x, target=None):\n",
     "        batch_size = x.size(0)\n",
     "        if target is None:\n",
-    "            target = torch.zeros(batch_size, self.max_length, dtype=torch.float, device=x.device)\n",
+    "            target = torch.zeros(batch_size, self.max_length, dtype=torch.long, device=x.device)\n",
     "        \n",
     "        embedded = self.embedding(target)\n",
     "        output, _ = self.rnn(embedded, x.unsqueeze(0))\n",
     "        logits = self.fc(output)\n",
-    "        \n",
-    "        # 确保输出的形状是 (batch_size, max_length, vocab_size)\n",
-    "        return logits.view(batch_size, self.max_length, -1)\n"
+    "        return logits\n"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
