--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -17,12 +17,19 @@
     "def get_data_loaders(batch_size=128):\n",
     "    # Fashion-MNIST的转换\n",
     "    fashion_transform = transforms.Compose([\n",
+    "        transforms.RandomResizedCrop(32, scale=(0.8, 1.0)),\n",
+    "        transforms.RandomHorizontalFlip(),\n",
+    "        transforms.RandomRotation(15),\n",
     "        transforms.ToTensor(),\n",
     "        transforms.Normalize((0.5,), (0.5,))\n",
     "    ])\n",
     "\n",
     "    # CIFAR-10的转换\n",
     "    cifar_transform = transforms.Compose([\n",
+    "        transforms.RandomResizedCrop(32, scale=(0.8, 1.0)),\n",
+    "        transforms.RandomHorizontalFlip(),\n",
+    "        transforms.ColorJitter(0.2, 0.2, 0.2),\n",
+    "        transforms.RandomRotation(15),\n",
     "        transforms.ToTensor(),\n",
     "        transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
     "    ])\n",
