--- a/model.ipynb
+++ b/model.ipynb
@@ -5,19 +5,7 @@
    "execution_count": 1,
    "id": "ebdf0dce",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'moe_encoders'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnn\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmoe_encoders\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ImageMoE, TextMoE \n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcross_attention\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CrossAttention\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mTextDecoder\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TextDecoder\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'moe_encoders'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import import_ipynb\n",
     "import torch\n",
@@ -29,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4e2235cc",
    "metadata": {},
    "outputs": [],
@@ -66,19 +54,25 @@
     "            nn.LayerNorm(output_dim),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(0.1)\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b2ee501",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def forward(self, images, input_ids, attention_mask):\n",
+    "        )\n",
+    "\n",
+    "        # 添加跨模态注意力层\n",
+    "        self.img2text_attention = CrossAttention(output_dim, n_head)\n",
+    "        self.text2img_attention = CrossAttention(output_dim, n_head)\n",
+    "\n",
+    "        # 添加文本解码器\n",
+    "        self.text_decoder = TextDecoder(\n",
+    "            vocab_size=vocab_size,\n",
+    "            max_length=max_text_length,\n",
+    "            embed_dim=output_dim\n",
+    "        )\n",
+    "\n",
+    "        # 添加分类头\n",
+    "        self.classifier = nn.Linear(output_dim, num_classes)\n",
+    "        \n",
+    "    def forward(self, images, input_ids, attention_mask):\n",
     "        # 获取基础特征\n",
-    "        first_image_output, second_image_output, image_feature_vector, image_cls, (first_expert_outputs, second_expert_outputs), (first_gating_output, second_gating_output) = self.image_tower(images)\n",
+    "        first_image_output, second_image_output, image_feature_vector, image_cls, image_expert_outputs, image_gating_outputs = self.image_tower(images)\n",
     "        first_text_output, second_text_output, text_feature_vector, text_cls = self.text_tower(input_ids, attention_mask)\n",
     "        \n",
     "        # 跨模态注意力\n",
@@ -89,27 +83,16 @@
     "        fused_features = self.fusion_layer(torch.cat([img2text_features, text2img_features], dim=-1))\n",
     "        \n",
     "        # 解码文本\n",
-    "        text_reconstruction = self.text_decoder(fused_features, input_ids)\n",
+    "        text_reconstruction = self.text_decoder(fused_features)\n",
     "        \n",
     "        # 分类预测\n",
     "        fused_cls = self.classifier(fused_features)\n",
     "        \n",
-    "        return (\n",
-    "            image_feature_vector, text_feature_vector, \n",
-    "            image_cls, text_cls, fused_cls,\n",
-    "            text_reconstruction,\n",
-    "            (first_expert_outputs, second_expert_outputs), \n",
-    "            (first_gating_output, second_gating_output)\n",
-    "        )"
+    "        return (image_feature_vector, text_feature_vector, \n",
+    "                image_cls, text_cls, fused_cls,\n",
+    "                text_reconstruction,\n",
+    "                (image_expert_outputs, None), (image_gating_outputs, None))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e1e51fd-3cf7-48f9-abc1-b277c6aba4db",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
